Fix for screen jumping for calendar and the use previous study controls
reviewer: Cy Casada

Issue: GCP-9571

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1707,3 +1707,7 @@ a[ng-click] {
 div.variable-details-popup {
 	width: 750px;
 }
+.fbk-use-previous-study{
+	padding-top: 4px;
+	padding-bottom: 4px;
+}
